added some stuff

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <!-- Game Description -->
     <p id="game-description">The goal of this game is earn the high score by controlling your character and having him/her run as far as possible by avoiding “bad” objects by jumping, crouching, and using collectible power-ups.</p>
+    <!-- FIXME: add example: show "Avoid these:" [picture of crate/bird], show "Collect these:" [picture of powerup] -->
 
     <!-- Character Selection -->
     <div id="character-select">
@@ -41,7 +42,7 @@
     <!-- Difficutly Selection/Slider -->
     <div id="difficulty">
       <p>Select Difficulty Level:</p>
-      <input type="range" min="0" max="2" value="1" step="0.5" class="difficulty-slider">
+      <input type="range" min="1" max="5" value="3" step="0.25" class="difficulty-slider">
     </div>
 
     <br><br>
