can alternate between start and interactive mode

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
   <script src="scripts/keys.js"></script>
   <script src="scripts/music_maker.js"></script>
 
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
   <!-- AUDIO -->
   <audio preload="auto">
     <!-- <source src="./audio/FIXME.mp3"></source> -->
   </audio>
 
-  <title>FIXME: Game Title</title>
+  <title>493 Music Maker</title>
 
   <meta charset="UTF-8">
   <meta name="description" content="EECS 493 Final Project">
@@ -28,9 +31,13 @@
 <body>
 
   <!-- MAIN SCREEN -->
-  <div class="FIXME"> 
-    <h1 id="game-title">FIXME: Game Title</h1>
-    <p id="instructions">Press any key to start</p>
+  <div class="main"> 
+
+    <div id="start-screen">
+      <h1>Music Maker</h1>
+      <!-- FIXME: can add cool logo or icon instead of just text -->
+      <p>Press any key to start</p>
+    </div>
 
   </div> 
   <!-- END MAIN SCREEN -->
