can spawn images and added animation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- JAVASCRIPT FILES -->
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/keys.js"></script>
+  <script src="scripts/master_dict.js"></script>
   <script src="scripts/music_maker.js"></script>
 
   <!-- FAVICON -->
@@ -16,7 +17,7 @@
 
   <!-- AUDIO -->
   <audio preload="auto">
-    <!-- <source src="./audio/FIXME.mp3"></source> -->
+    <source src="./audio/gameover.wav"></source>
   </audio>
 
   <title>493 Music Maker</title>
