added bottom-up animation function, other minor changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="start-screen">
       <h1>Music Maker</h1>
       <!-- FIXME: can add cool logo or icon instead of just text -->
-      <p>Press any key to start</p>
+      <p>Press any alphanumeric key to start</p>
     </div>
 
   </div> 
