--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style/style.css">
     
+    <!-- JQuery -->
+    <script src="scripts/jquery.min.js"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -15,7 +18,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     
     <!-- JAVASCRIPT FILES -->
-    <script src="scripts/jquery.min.js"></script>
     <script src="scripts/keys.js"></script>
     <script src="scripts/master_dict.js"></script>
     <script src="scripts/music_maker.js"></script>
