added mode selection

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
       <img src="./img/Music_Maker.png">
     </div>
 
-    <div class="col-xs-9" id="genre_selector">
-      <div class="col-xs-3" id="random">
+    <div class="col-xs-9 genre_selector">
+      <div class="col-xs-3 genre" id="random">
         <h4>RANDOM</h4>
       </div>
-      <div class="col-xs-3" id="drum_kit">
+      <div class="col-xs-3 genre" id="drum_kit">
         <h4>DRUM KIT</h4>
       </div>
-      <div class="col-xs-3" id="techno">
+      <div class="col-xs-3 genre" id="techno">
         <h4>TECHNO</h4>
       </div>
-      <div class="col-xs-3" id="piano">
+      <div class="col-xs-3 genre" id="piano">
         <h4>PIANO</h4>
       </div>
     </div>
