added prev keys queue

--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@
       <div class="col-xs-3 genre" id="piano">
         <h4>PIANO</h4>
       </div>
+<!--       <div class="col-xs-3 genre" id="tutorial">
+        <h4>TUTORIAL</h4>
+      </div> -->
     </div>
 
   </div> <!-- end header -->
 
   <div id="main">         
-    <p id="instructions">Press any alphanumeric key to start</p>    
+    <p id="instructions">Press any alphanumeric key to start</p>  
+    <div id="prev_keys"></div>  
   </div> 
 
 </body>
-
 <footer>Hit the [Esc] key to exit</footer>
 
 </html>
