added tutorial mode option

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
     </div>
 
     <div class="col-xs-9 genre_selector">
-      <div class="col-xs-3 genre" id="random">
+      <div class="col-xs-2 genre" id="random">
         <h4>RANDOM</h4>
       </div>
-      <div class="col-xs-3 genre" id="drum_kit">
-        <h4>DRUM KIT</h4>
+      <div class="col-xs-2 genre" id="drum_kit">
+        <h4>DRUMS</h4>
       </div>
-      <div class="col-xs-3 genre" id="techno">
+      <div class="col-xs-2 genre" id="techno">
         <h4>TECHNO</h4>
       </div>
-      <div class="col-xs-3 genre" id="piano">
+      <div class="col-xs-2 genre" id="piano">
         <h4>PIANO</h4>
       </div>
-<!--       <div class="col-xs-3 genre" id="tutorial">
+      <div class="col-xs-2 genre" id="tutorial">
         <h4>TUTORIAL</h4>
-      </div> -->
+      </div>
     </div>
 
   </div> <!-- end header -->
