--- a/index.html
+++ b/index.html
@@ -70,13 +70,9 @@
 
   <div id="main">     
     <div id="prev_keys"></div>     
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br><br><br>
     <p id="instructions">Press any alphanumeric key to start</p>
+    <img id="piano_img" src="./img/piano_keyboard.png">
   </div> 
 
 </body>
