added tutorial stuff adding pics, style, html, and js

--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
     <br><br><br>
     <p id="instructions">Press any alphanumeric key to start</p>
     <img id="piano_img" src="./img/piano_keyboard.png">
-  </div> 
+    <div id="tutorial_div">
+      <img id="red_line" src="./img/play_bar_tutorial.jpg">
+      <img id="drums_1_img" src="./img/tutorial_drum_beat_1.jpg">
+    </div>
+  </div>
 
 </body>
 <footer>Hit the [Esc] key to exit</footer>
