fixed image stuff for piano, tutorial, etc.

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <div id="prev_keys"></div>     
     <br><br><br>
     <p id="instructions">Press any alphanumeric key to start</p>
-    <img id="piano_img" src="./img/piano_keyboard.png">
-    <div id="tutorial_div">
+
+    <div id="img_div">
       <img id="red_line" src="./img/play_bar_tutorial.jpg">
-      <img id="drums_1_img" src="./img/tutorial_drum_beat_1.jpg">
+      <img id="image_on_screen" src="">
     </div>
   </div>
 
