added unique on-screen imgs for each mode

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div id="img_div">
       <img id="red_line" src="./img/play_bar_tutorial.jpg">
-      <img id="image_on_screen" src="">
+      <img id="image_on_screen" src="./img/random.gif">
     </div>
   </div>
 
