--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         <h4>PIANO</h4>
       </div>
       <div class="col-xs-2 genre" id="tutorial">
-        <h4>TUTORIAL</h4>
+        <h4>TUTORIAL DRUMS</h4>
+      </div>
+      <div class="col-xs-2 genre" id="tutorial2">
+        <h4>TUTORIAL PIANO</h4>
       </div>
     </div>
 
@@ -76,6 +79,9 @@
     <div id="img_div">
       <img id="red_line" src="./img/play_bar_tutorial.jpg">
       <img id="image_on_screen" src="./img/random.gif">
+    </div>
+      <img id="image_on_screen2" src="./img/piano_keyboard.png">
+    <div>
     </div>
   </div>
 
