revamped tutorial mode

--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
         <h4>PIANO</h4>
       </div>
       <div class="col-xs-2 genre" id="tutorial">
-        <h4>TUTORIAL DRUMS</h4>
-      </div>
-      <div class="col-xs-2 genre" id="tutorial2">
-        <h4>TUTORIAL PIANO</h4>
+        <h4>TUTORIAL</h4>
       </div>
     </div>
 
@@ -77,11 +74,8 @@
     <p id="instructions">Press any alphanumeric key to start</p>
 
     <div id="img_div">
-      <img id="red_line" src="./img/play_bar_tutorial.jpg">
+      <img id="red_line" src="./img/play_bar_tutorial.png">
       <img id="image_on_screen" src="./img/random.gif">
-    </div>
-      <img id="image_on_screen2" src="./img/piano_keyboard.png">
-    <div>
     </div>
   </div>
 
