added start tutorial button, other minor changes

--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
 
   <!-- FAVICON -->
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-  
-  <!-- AUDIO -->
-  <!--
-  <audio preload="auto">
-    <source src="./audio/gameover.wav"></source>
-  </audio>
-  -->
 
   <title>493 Music Maker</title>
 
@@ -70,8 +63,9 @@
 
   <div id="main">     
     <div id="prev_keys"></div>     
-    <br><br><br>
+    <br>
     <p id="instructions">Press any alphanumeric key to start</p>
+    <button id="start_tutorial">Start Tutorial</button><br><br>
 
     <div id="img_div">
       <img id="red_line" src="./img/play_bar_tutorial.png">
