implemented some usability suggestions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="row" id="header">
 
     <div class="col-xs-3" id="title">
-      <img src="./img/Music_Maker.png">
+      <img id="logo" src="./img/Music_Maker.png">
     </div>
 
     <div class="col-xs-9 genre_selector">
